--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 <body>
     <div class="wrap">
         <div class="mytitle">
-            <h1>따라하다보면 당당해지는 쿠버네티스 0210 CI CD 완성! </h1>
+            <h1>따라하면 당당해지는 쿠버네티스 0210 CI CD 완성! </h1>
             <h2>로그인 페이지</h2>
             <h5>아이디, 비밀번호를 입력하세요</h5>
         </div>
         <p>ID : <input type="text" /></p>
         <p>PW : <input type="text" /></p>
-        <button> 로그인 하기 </button>
+        <button> Login </button>
     </div>
 </body>
 
