--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 타이틀 아직 고민 중 -->
-    <title>박창엽</title>
+    <title>따당쿠</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
         * {
