--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 타이틀 아직 고민 중 -->
-    <title>박창엽 테스트</title>
+    <title>따당쿠의 홈페이지</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
         * {
@@ -44,13 +44,13 @@
 <body>
     <div class="wrap">
         <div class="mytitle">
-            <h1>따라하면 당당해지는 쿠버네티스 0210 CI CD 완성! </h1>
+            <h1>따라하면 당당해지는 쿠버네티스 0212 CI CD 완성! </h1>
             <h2>로그인 페이지</h2>
             <h5>아이디, 비밀번호를 입력하세요</h5>
         </div>
         <p>ID : <input type="text" /></p>
         <p>PW : <input type="text" /></p>
-        <button> Login </button>
+        <button> 로그인 </button>
     </div>
 </body>
 
