--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <p>ID : <input type="text" /></p>
         <p>PW : <input type="text" /></p>
-        <button> 로그인 </button>
+        <button> Login </button>
     </div>
 </body>
 
